--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,8 +23,9 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "gallery"}
       - {label: "Tags", name: "tags", widget: "hidden", default: "gallery"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
