Changed label name

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -28,4 +28,4 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Featured Image 2", name: "thumbnail", widget: "image"}
